@@ -84,10 +84,15 @@ public class RegisterServerService {
       repository.save(user);
       UserModel newUser = repository.findByUsername(request.getUsername());
       try {
-        GroupModel group = groupRepository.findByShortName("Non Group");
-        GroupMemberModel groupMember = groupMemberRepository.findById(group.getId()).get();
-        groupMember.addUserIds(Collections.singletonList(newUser.getId()));
-        groupMemberRepository.save(groupMember);
+        GroupModel nonGroup = groupRepository.findByShortName("Non Group");
+        if (groupMemberRepository.findById(nonGroup.getId()).isPresent()) {
+          GroupMemberModel groupMember = groupMemberRepository.findById(nonGroup.getId()).get();
+          groupMember.addUserIds(Collections.singletonList(newUser.getId()));
+          groupMemberRepository.save(groupMember);
+        } else {
+          GroupMemberModel newGroup = new GroupMemberModel(nonGroup.getId(), List.of(newUser.getId()));
+          groupMemberRepository.save(newGroup);
+        }
       } catch (NullPointerException e) {
         e.getMessage();
       }
